Prevent to wrap tabs

--- a/src/components/layout/Tabs.module.scss
+++ b/src/components/layout/Tabs.module.scss
@@ -1,5 +1,9 @@
 @import "mixins";
 
+.tabs {
+  white-space: nowrap;
+}
+
 .card {
   background: var(--bg-muted);
   border: var(--border-width) solid var(--card-border);
